# messenger

./: .env.example  .gitignore
docs/: v0.1.0-er_init.puml
docs/data_pipeline/: v0.1.0-init.puml
docs/er_diagram/: v0.1.0-er_init.puml
src/: manage.py  pyproject.toml
src/api/: urls.py  views.py
src/api/serializers/: __init__.py  chat.py  message.py  user.py
src/api/views/: __init__.py  auth.py  chat.py  message.py  user.py
src/core/: admin.py  models.py
src/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
src/core/models/: __init__.py  chat.py  message.py  mixins.py  user.py
src/messenger/: asgi.py  settings.py  urls.py  wsgi.py
